hphp/hack/test/typecheck/reified_generics/soft_reified_within_function.php.exp
ERROR: File "soft_reified_within_function.php", line 13, characters 8-12:
Invalid `as` expression hint (Typing[4195])
  File "soft_reified_within_function.php", line 13, characters 8-12:
  The `as` operator cannot be used with a soft reified generic type parameter
ERROR: File "soft_reified_within_function.php", line 16, characters 7-11:
Soft reified generics can only be used in type hints because they do not exist at runtime. (Typing[4124])
ERROR: File "soft_reified_within_function.php", line 19, characters 3-7:
Soft reified generics can only be used in type hints because they do not exist at runtime. (Typing[4124])
WARN: File "soft_reified_within_function.php", line 12, characters 3-12:
This `as` assertion will always fail and lead to an exception at runtime. The expression on the left has type `int` which shares no values with `Thard`. (Warn[12012])
WARN: File "soft_reified_within_function.php", line 13, characters 3-12:
This `as` assertion will always fail and lead to an exception at runtime. The expression on the left has type `int` which shares no values with `Tsoft`. (Warn[12012])
